Start of mvc implementation
based on laracast tutorial

--- a/public/css/home/grid/grid.css
+++ b/public/css/home/grid/grid.css
@@ -21,9 +21,9 @@
   padding-left: 20%;
 }
 
-#tool-bar .btn i {
+/* #tool-bar .btn i {
   margin-right: 10px;
-}
+} */
 
 #container {
   margin: 0 25vw 0 20vw;
